# MLOps_lab1

./: .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  feature_target_names.pkl  main.py  model.pkl  public_key.asc  pyproject.toml  secrets.yaml  settings.py
app/: app.py  inference.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_endpoints.py
